gcc/testsuite/gdc.test/compilable/imports/test22685c.d
module imports.test22685c;

void overloaded()() { }
