gcc/testsuite/gdc.test/fail_compilation/imports/diag10089b.d
module imports.diag10089b;

void chunks(Source)(Source source, size_t chunkSize)
{
}
